fixed layout problems

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -10,6 +10,7 @@
 .main-layout{
 	display: grid;
 	grid-template-columns: 355px 1fr;
+	grid-template-rows: 80px 1fr;
 	height: 100vh;
 }
 .main-container {
@@ -24,24 +25,24 @@
 		}
 	}
 
-	@include for-narrow-layout {
-		grid-template-columns:
-			1fr
-			minmax(auto, $mobile-breakpoint)
-			minmax(20px, 1fr);
-	}
+	// @include for-narrow-layout {
+	// 	grid-template-columns:
+	// 		1fr
+	// 		minmax(auto, $mobile-breakpoint)
+	// 		minmax(20px, 1fr);
+	// }
 
-	@include for-normal-layout {
-		grid-template-columns:
-			minmax(20px, 1fr)
-			minmax(auto, $narrow-breakpoint)
-			minmax(20px, 1fr);
-	}
+	// @include for-normal-layout {
+	// 	grid-template-columns:
+	// 		minmax(20px, 1fr)
+	// 		minmax(auto, $narrow-breakpoint)
+	// 		minmax(20px, 1fr);
+	// }
 
-	@include for-wide-layout {
-		grid-template-columns:
-			minmax(20px, 1fr)
-			minmax(auto, $normal-breakpoint)
-			minmax(20px, 1fr);
-	}
+	// @include for-wide-layout {
+	// 	grid-template-columns:
+	// 		minmax(20px, 1fr)
+	// 		minmax(auto, $normal-breakpoint)
+	// 		minmax(20px, 1fr);
+	// }
 }
