--- a/src/assets/styles/cmps/_AppHeader.scss
+++ b/src/assets/styles/cmps/_AppHeader.scss
@@ -3,7 +3,7 @@
 	display: flex;
 	position: sticky;
 	top: 0;
-	height: rem(79px);
+	height: rem(80px);
 	background-color: #121212;
 	color: whitesmoke;
 	z-index: 2;
