--- a/src/assets/styles/cmps/_SearchPage.scss
+++ b/src/assets/styles/cmps/_SearchPage.scss
@@ -1,10 +1,7 @@
 .search-page {
-	top: 60px;
-	left: 100px;
-	margin-top: 70px;
-	margin-left: 353px;
+
+
 	max-width: 100%;
-	height: 1800px;
 	overflow: hidden;
 	background-color: #121212;
 
