--- a/src/assets/styles/views/_StationDetails.scss
+++ b/src/assets/styles/views/_StationDetails.scss
@@ -1,7 +1,7 @@
 .station-details {
 	display: grid;
-	margin-left: em(315px);
-	margin-top: 74px;
+	margin-bottom: auto;
+	margin-bottom: 95px;
 	background-color: rgb(21, 21, 21);
 
 	.search-song-txt {
@@ -15,12 +15,10 @@
 	.station-header {
 		display: flex;
 		color: aliceblue;
-		width: 102%;
-		margin-left: -3.5px;
-		margin-top: -2px;
 		align-items: center;
 		position: relative;
-		.fade{
+
+		.fade {
 			width: 102%;
 			position: absolute;
 			height: 150px;
@@ -132,8 +130,10 @@
 				grid-template-columns: 16px 6fr 4fr 3fr minmax(40px, 1fr);
 				height: 56px;
 				padding-left: 15px;
+
 				&:hover {
 					cursor: pointer;
+
 					.like-btn {
 						opacity: 1;
 					}
@@ -145,8 +145,9 @@
 					margin-right: 20px;
 					display: flex;
 					opacity: 0;
+
 					&:hover {
-					
+
 						cursor: pointer;
 					}
 				}
@@ -249,13 +250,16 @@
 				height: 40px;
 				opacity: 1;
 			}
+
 			input:focus {
 				outline: none;
-				
-				border:none;
+
+				border: none;
+
 				.search-icon {
-					fill: #fff; /* Change icon color on input focus */
-				  }
+					fill: #fff;
+					/* Change icon color on input focus */
+				}
 			}
 		}
 	}
@@ -298,7 +302,8 @@
 		background-color: rgba(0, 0, 0, .7);
 		opacity: 0;
 		z-index: 2;
-		&:hover{
+
+		&:hover {
 			opacity: 1;
 		}
 
