--- a/src/assets/styles/views/_StationIndex.scss
+++ b/src/assets/styles/views/_StationIndex.scss
@@ -3,7 +3,7 @@
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 	background-color: #121212;
-	align-content: space-evenly;
+	align-content: baseline;
 	justify-items: stretch;
 	border-end-start-radius: 0.525em;
 	border-end-end-radius: 0.525em;
